# graphl-parser

./: Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  playground.txt  taplo.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/binstall/: devcontainer-feature.json  install.sh
.devcontainer/bnfc/: devcontainer-feature.json  install.sh
.devcontainer/cargo-make/: devcontainer-feature.json  install.sh
.devcontainer/clang/: devcontainer-feature.json  install.sh
.devcontainer/homebrew/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: parser.yaml
.zed/: tasks.json
etc/: grammar.bnfc
js-package/: .gitignore  package-lock.json  package.json  vite.config.ts
js-package/js-wrapper/: index.js
parser/: .gitignore  Absyn.c  Absyn.h  Bison.h  Buffer.c  Buffer.h  Lexer.c  Makefile  Parser.c  Parser.h  Printer.c  Printer.h  Skeleton.c  Skeleton.h  Test.c  Testgrammar  Visitor.h  grammar.l  grammar.y  panic.h  wasm.c  wasm.h  wrapper.h
src/: ast.rs  bindings.rs  context.rs  env.js  guard.rs  lib.rs  main.rs  parse.rs  print.rs  rholang.rs  show.rs  visitor.rs  visitors.rs  walk.rs  walker.rs  wasm.rs
src/rholang/: channel.rs  contract_builder.rs
tests/: lib.rs
