[package]
authors = ["Denys Bushuliak <denys.b@devbrother.com>"]
build   = "build.rs"
edition = "2024"
name    = "graphl-parser"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scopeguard = { version = "1.2" }
serde      = { version = "1.0", features = ["derive"] }
thiserror  = { version = "2.0" }

[build-dependencies]
bindgen = { version = "0.72" }
cc      = { version = "1.2" }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = { version = "0.1" }
tsify                    = { version = "0.5" }
wasm-bindgen             = { version = "0.2" }

[profile.wasm]
codegen-units = 1
inherits      = "release"
lto           = true
opt-level     = "z"
